dev/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: public.service-a.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-test-service
                port:
                  number: 8081
